--- a/bib.bib
+++ b/bib.bib
@@ -85,6 +85,19 @@
   year={2009}
 }
 
+% derivation of geometric jacobian for SE(3)
+@article{Garofalo2013,
+author = {Garofalo, Gianluca and Ott, Christian and Albu-Schaffer, Alin},
+doi = {10.1109/IROS.2013.6696688},
+isbn = {9781467363587},
+issn = {21530858},
+journal = {IEEE International Conference on Intelligent Robots and Systems},
+pages = {2364--2369},
+title = {{On the closed form computation of the dynamic matrices and their differentiations}},
+year = {2013}
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% CONTROL OF SOFT ROBOTICS  %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -149,3 +162,38 @@ doi = "https://doi.org/10.1016/S1474-6670(17)58105-7",
 url = "http://www.sciencedirect.com/science/article/pii/S1474667017581057",
 author = "Mark W. Spong",
 }
+
+@article{Schaft2004,
+author = {Schaft, A. J.},
+doi = {10.1007/978-3-7091-2774-2_9},
+file = {:home/brandon/Downloads/CISMpaper.pdf:pdf},
+journal = {Advanced Dynamics and Control of Structures and Machines},
+pages = {127--167},
+title = {{Port-Hamiltonian Systems: Network Modeling and Control of Nonlinear Physical Systems}},
+year = {2004}
+}
+
+@article{Belda2016,
+author = {{V. Z{\'{a}}da and K. Belda}},
+isbn = {9781467386067},
+journal = {2016 17th International Carpathian Control Conference (ICCC)},
+keywords = {hamiltonian formalism,mathe-,matical modeling,model-oriented motion control,pd control,robot-manipulator},
+pages = {813--818},
+title = {{Mathematical Modeling of Industrial Robots based on Hamiltonian Mechanics}},
+year = {2016}
+}
+
+@article{Berghuis1993,
+author = {Berghuis, Harry and Nijmeijer, Henk},
+doi = {10.1109/70.265918},
+file = {:home/brandon/Downloads/00265918.pdf:pdf},
+issn = {1042296X},
+journal = {IEEE Transactions on Robotics and Automation},
+number = {6},
+pages = {740--754},
+title = {{A Passivity Approach to Controller-Observer Design for Robots}},
+volume = {9},
+year = {1993}
+}
+
+
