--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{phd}
+\documentclass[10pt]{phd}
 \title{Towards Design and Control \\ of Soft Robots}
 \author{Brandon Jonathan Caasenbrood}
 \college{Eindhoven University of Technology}
@@ -13,21 +13,22 @@
 %\include{text/1_chap/fem}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\chapter{Dynamics of Soft Robots}
-% \label{ch:2-dynamics} 
-% \input{./text/2_chap/1_liegroup/text}
-%\input{./text/2_chap/2_config/text}
-%\input{./text/2_chap/2_curvekin/text}
-%\input{./text/2_chap/3_hamilton/text}
+\chapter{Dynamics of Soft Robots}
+\label{ch:2-dynamics} 
+	%\input{./text/2_chap/1_liegroup/text}
+	\input{./text/2_chap/2_config/text}
+	\input{./text/2_chap/2_curvekin/text}
+	\input{./text/2_chap/3_hamilton/text}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Control of Soft Robots}
-\input{./text/3_chap/1_underact/text}
-\input{./text/3_chap/2_dis_shp/text}
-\input{./text/3_chap/3_part_fbk/text}
+	\input{./text/3_chap/1_underact/text}
+	\input{./text/3_chap/2_dis_shp/text}
+	%\input{./text/3_chap/3_part_fbk/text}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
 %\input{./text/appendix/1_lie_group/text}
 %\input{./text/appendix/2_geometric_jacobian/text}
-\bibliography{/home/brandon/Documents/phd/thesis/ThesisSoftRobotics/bib}
+\bibliography{/home/brandon/Documents/phd/thesisSoftRobotics/bib}
 \bibliographystyle{plain}
 \end{document}
