--- a/bib.bib
+++ b/bib.bib
@@ -173,7 +173,7 @@ title = {{Port-Hamiltonian Systems: Network Modeling and Control of Nonlinear Ph
 year = {2004}
 }
 
-@article{Belda2016,
+@article{Zalda2016,
 author = {{V. Z{\'{a}}da and K. Belda}},
 isbn = {9781467386067},
 journal = {2016 17th International Carpathian Control Conference (ICCC)},
