--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,8 @@
 	\input{./text/2_chap/2_config/text}
 	\input{./text/2_chap/2_curvekin/text}
 	\input{./text/2_chap/3_hamilton/text}
+	\input{./text/2_chap/4_projection/text}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Control of Soft Robots}
 	\input{./text/3_chap/1_underact/text}
@@ -27,7 +29,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
-%\input{./text/appendix/1_lie_group/text}
+\input{./text/appendix/1_lie_group/text}
 %\input{./text/appendix/2_geometric_jacobian/text}
 \bibliography{/home/brandon/Documents/phd/thesisSoftRobotics/bib}
 \bibliographystyle{plain}
