--- a/text/2_chap/3_hamilton/text.tex
+++ b/text/2_chap/3_hamilton/text.tex
@@ -1,4 +1,4 @@
-%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics\main.tex
+%!TEX root = /home/brandon/Documents/phd/thesisSoftRobotics/main.tex
 \section*{Continuous dynamics for soft robots}
 In this section, we derive the dynamical model of the soft robot through Hamilton's variational principle. Given an interval $[t_0,t_1]$, the variational principle states that the evolution of a state $q(t)$ between $q(t_0)$ and $q(t_1)$ is a stationary point regarding an action functional, $\mathcal{S} = \int_{t_0}^{t_1} \mathcal{L}(\vec{q},\dot{q},t) \; dt$ in which $\mathcal{L}(\vec{q},\dot{\vec{q}}) := \mathcal{T}(\vec{q},\dot{\vec{q}}) - \mathcal{V}(\vec{q})$ is the Lagrangian. The generalization of Hamilton's principle \cite{Boyer2010} includes an external potential contributions, and it can be formally written as
 \begin{equation} 
