--- a/text/appendix/1_lie_group/text.tex
+++ b/text/appendix/1_lie_group/text.tex
@@ -1,4 +1,4 @@
-%!TEX root = /home/brandon/Documents/phd/thesis/ThesisSoftRobotics/main.tex
+%!TEX root = /home/brandon/Documents/phd/thesisSoftRobotics/main.tex
 \chapter{Fundamentals on \\ \vspace{5mm} Lie Group Theory}
 In this chapter, we will discuss the fundamentals on Lie groups and their associated Lie algebras.
 
@@ -12,3 +12,5 @@ A Lie group encompasses the concepts of `group' and `smooth manifold' in a uniqu
 \end{enumerate}
 
 The smoothness of the Lie groups intuitively suggests the existence of useful differential geometries. For any elements $g$ on the smooth manifold $\G$, there exists a tangent linear space denoted by $T_{g} \mathcal{G}$. The tangent space of the Lie group at the identity element $e$ is referred to as the associative Lie algebra $\g$ of the group. it allows us to perform algebra computation concerning the Lie group.
+
+\section{Adjoint action on $\SE{3}$}
