--- a/text/appendix/app.tex
+++ b/text/appendix/app.tex
@@ -42,6 +42,7 @@ endowed with the bracket operations $[\hat{\xi}_1,\hat{\xi}_2] = \hat{\xi}_1\hat
 
 \end{definition}
 
+\section{adjoint action on $\SE{3}$}
 % \chapter{}
 % \section{Velocity of constant-curvature model}
 
